argocd/install/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  labels:
    managed-by: terraform
  annotations:
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
    alb.ingress.kubernetes.io/scheme: "internal"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - argocd.pharma.internal
      secretName: argocd-tls
  rules:
    - host: argocd.pharma.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
